// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart renders svg chart container with the right slots 1`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(20, 10)">
            <div>
              Default Slot
            </div>
          </g>
        </svg>
      </div>
      <div>
        Legend Slot
      </div>
    </div>
    <div>
      Tooltip Slot
    </div>
  </div>
</div>
`;

exports[`Chart should provide the chart data to the children components 1`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(20, 10)">
            <div>
              [{"id":"1","label":"Alpha","value":50,"amount":10},{"id":"2","label":"Beta","value":100,"amount":20},{"id":"3","label":"Gamma","value":75,"amount":30}]
            </div>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;
